--- a/app/views/filmster_lessons/lessons/lesson_25.html.erb
+++ b/app/views/filmster_lessons/lessons/lesson_25.html.erb
@@ -1,5 +1,5 @@
 <p>
-  We covered a lot of material in the last few lessons. Let's practice the material once again by building a similar feature - upvoting. You are going to follow similar steps as you did when you were building the follow feature to accomplish this.
+  We covered a lot of material in the last few lessons. <strong>Let's practice the material once again by building a similar feature - upvoting.</strong> You are going to follow similar steps as you did when you were building the follow feature to accomplish this.
 </p>
 
 <h2>Tasks</h2>
