--- a/app/views/filmster_lessons/lessons/lesson_27.html.erb
+++ b/app/views/filmster_lessons/lessons/lesson_27.html.erb
@@ -83,9 +83,9 @@ end
   <li>Write the Jbuilder code to create the API endpoint</li>
   <li>The endpoint should return:</li>
   <ul>
-    <li>The user of the review</li>
-    <li>The movie of the review</li>
-    <li>The comment of the review</li>
+    <li>The <strong>user</strong> of the review</li>
+    <li>The <strong>movie</strong> of the review</li>
+    <li>The <strong>comment</strong> of the review</li>
   </ul>
   <li>Use AJAX to render the reviews inside the <code>#movies</code> div inside <code>timeline.index.html.erb</code></li>
 </ul>
