--- a/app/views/filmster_lessons/lessons/lesson_26.html.erb
+++ b/app/views/filmster_lessons/lessons/lesson_26.html.erb
@@ -1,5 +1,5 @@
 <p>
-  By now, you should have the ability to figure most things out yourself. This means that you are becoming more and more capable of doing things by yourself. This is one of the most important qualities as a developer - in the real world, you are going to have to figure out things yourself. In this self-directed lesson, you are going to implement ActionMailer - which is what enables you to send out emails from your Rails application.
+  <strong>By now, you should have the ability to figure most things out yourself.</strong> This means that you are becoming more and more capable of doing things by yourself. This is one of the most important qualities as a developer - in the real world, you are going to have to figure out things yourself. In this self-directed lesson, you are going to implement ActionMailer - which is what enables you to send out emails from your Rails application.
 </p>
 
 <h2>Tasks</h2>
