--- a/app/views/filmster_lessons/lessons/lesson_29.html.erb
+++ b/app/views/filmster_lessons/lessons/lesson_29.html.erb
@@ -31,12 +31,12 @@ end
 <ul>
   <li>Display each recent review in <code>static_pages/index.html.erb</code></li>
   <ul>
-    <li>Comment</li>
-    <li>Username of the user that reviewed</li>
+    <li><strong>Comment</strong></li>
+    <li><strong>Username</strong> of the user that reviewed</li>
     <ul>
       <li>The username should be a link to the user's profile page</li>
     </ul>
-    <li>Title of the movie</li>
+    <li><strong>Title</strong> of the movie</li>
     <ul>
       <li>The title should link to the movie's show page</li>
     </ul>
