--- a/app/views/filmster_lessons/lessons/lesson_31.html.erb
+++ b/app/views/filmster_lessons/lessons/lesson_31.html.erb
@@ -7,7 +7,7 @@
 </p>
 
 <p>
-  Give yourself a high five and a pat on the back for coming this far.
+  <strong>Give yourself a high five and a pat on the back for coming this far.</strong>
 </p>
 
 <p>
