--- a/app/views/courses/_track.html.erb
+++ b/app/views/courses/_track.html.erb
@@ -1,17 +1,22 @@
-<div class="track">
-  <h1><%= track.name %></h1>
+<div class="col-xs-12 col-md-4">
+  <a class="track">
+    <div class="track-number">
+      Track <%= track.number %>
+    </div>
+    <div class="track-title">
+      <h3><%= track.title %></h3>
+    </div>
 
-  <p><%= track.description %></p>
+    <div class="track-description">
+      <p><%= track.description %></p>
+    </div>
 
-  <div class="track-icons">
+    <div class="track-timeline">
+      <span class="label label-track"><i class="fa fa-clock-o" aria-hidden="true"></i> Week <%= track.timeline %></span>
+    </div>
 
-  </div>
-
-  <div class="track-timeline">
-    <span class="label label-default"><i class="fa fa-clock-o" aria-hidden="true"></i> Week <%= track.timeline %></span>
-  </div>
-
-  <div class="track-progression">
-    
-  </div>
+    <div class="track-progression">
+      
+    </div>
+  </a>
 </div>
