--- a/app/views/courses/_track.html.erb
+++ b/app/views/courses/_track.html.erb
@@ -1,5 +1,5 @@
 <div class="col-xs-12 col-md-4">
-  <a class="track">
+  <div class="track">
     <div class="track-number">
       Track <%= track.number %>
     </div>
@@ -18,5 +18,5 @@
     <div class="track-progression">
       
     </div>
-  </a>
+  </div>
 </div>
