--- a/app/assets/stylesheets/track.scss
+++ b/app/assets/stylesheets/track.scss
@@ -1,3 +1,53 @@
+.track-container a {
+  color: none;
+
+  .track-title {
+    height: 50px;
+    h3 {      
+      color: #333;
+      margin-top: 0px;
+      font-weight: 600;
+    }
+  }
+
+  .track-description {
+    height: 170px;
+    color: #333;
+  }
+
+  .track-icons {
+    margin-bottom: 20px;
+    img {
+      height: 40px;
+    }
+  }
+
+  .track-number {
+    font-size: 18px;
+    /* text-transform: uppercase; */
+    font-family: 'Titillium Web';
+    font-weight: 600;
+    color: #999999;
+  }
+
+  .course-track-title {
+    color: #999999;
+    font-weight: 600;
+    margin-bottom: 20px;
+  }
+
+  .label-track {
+    border: 1px solid #666666;
+    color: #666666;
+    font-weight: 600;
+  }
+
+  &:hover {
+    color: none;
+    text-decoration: none;
+  }
+}
+
 .track {
   height: 350px;
   background: white;
@@ -5,6 +55,7 @@
   margin-bottom: 30px;
   border-radius: 4px;
   border: 2px solid #ddd;
+  position: relative;
 
   transition: border 700ms ease;
   -webkit-transition: border 700ms ease;
@@ -18,43 +69,11 @@
     -moz-transition: border 700ms ease;
     -o-transition: border 700ms ease;
   }
-}
 
-.track-title {
-  height: 50px;
-  h3 {
-    margin-top: 0px;
-    font-weight: 600;
+  .btn-track-access {
+    position: absolute;
+    right: 20px;
+    bottom: 20px;
   }
 }
 
-.track-description {
-  height: 170px;
-}
-
-.track-icons {
-  margin-bottom: 20px;
-  img {
-    height: 40px;
-  }
-}
-
-.track-number {
-  font-size: 18px;
-  /* text-transform: uppercase; */
-  font-family: 'Titillium Web';
-  font-weight: 600;
-  color: #999999;
-}
-
-.course-track-title {
-  color: #999999;
-  font-weight: 600;
-  margin-bottom: 20px;
-}
-
-.label-track {
-  border: 1px solid #666666;
-  color: #666666;
-  font-weight: 600;
-}
