--- a/app/views/courses/_track.html.erb
+++ b/app/views/courses/_track.html.erb
@@ -1,22 +1,22 @@
 <div class="col-xs-12 col-md-4">
-  <div class="track">
-    <div class="track-number">
-      Track <%= track.number %>
-    </div>
-    <div class="track-title">
-      <h3><%= track.title %></h3>
-    </div>
+  <div class="track-container">
+    <%= link_to get_lesson_url_string(track.courses.first, 1) do %>
+      <div class="track">
+        <div class="track-number">
+          Track <%= track.number %>
+        </div>
+        <div class="track-title">
+          <h3><%= track.title %></h3>
+        </div>
 
-    <div class="track-description">
-      <p><%= track.description %></p>
-    </div>
+        <div class="track-description">
+          <p><%= track.description %></p>
+        </div>
 
-    <div class="track-timeline">
-      <span class="label label-track"><i class="fa fa-clock-o" aria-hidden="true"></i> Week <%= track.timeline %></span>
-    </div>
-
-    <div class="track-progression">
-      
-    </div>
+        <div class="track-progression">
+          
+        </div>
+      </div>
+    <% end %>
   </div>
 </div>
