--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -22,7 +22,7 @@
 
 @media screen and (max-width: 720px) {
   .header.scrolled_nav .main-nav .nav .nav-item a {
-    color: white;
+    color: white !important;
   }
 }
 
@@ -136,6 +136,10 @@
   -webkit-box-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
   -moz-box-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
+
+  .icon-bar {
+    background: #ec6952 !important;
+  }
 }
 
 .chapter-nav:after {
@@ -207,4 +211,32 @@
 .lesson-li {
   font-weight: 600 !important;
   padding: 10px 30px !important;
+}
+
+
+// breakpoint
+
+@media (max-width: 992px) {
+    .navbar-header {
+        float: none;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
+    }
+    
+    .navbar-nav {
+        float: none!important;
+        margin: 7.5px -15px;
+    }
+    .navbar-nav>li {
+        float: none;
+    }
+    .navbar-nav>li>a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
 }
