--- a/app/views/courses/_progress.html.erb
+++ b/app/views/courses/_progress.html.erb
@@ -16,7 +16,7 @@
             </div>
 
             <div class="col-sm-8 col-xs-12">
-                <h3 style="text-align: left;"><i class="fa fa-code" style="color: #f29a8b;" aria-hidden="true"></i> <%= lesson_name %></h3>
+                <h3 style="text-align: left;"><%= lesson_name %></h3>
             </div>
           </div><!-- row -->
 
