--- a/app/views/courses/_track.html.erb
+++ b/app/views/courses/_track.html.erb
@@ -13,11 +13,21 @@
           <p><%= track.description %></p>
         </div>
 
-        <div class="track-progression">
+        
           <% unless current_user.has_access_to?(track.courses.first.underscore.chomp("_lesson")) %>
             <button class="btn btn-sm btn-cta-primary btn-track">Locked</button>
           <% end %>
+        
+
+
+        <div class="track-progression">
+          <div class="progress">
+            <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="<%= progress %>" aria-valuemin="0" aria-valuemax="100" style="width: <%= progress %>%; min-width: 4em;">
+              <%= progress %>% completed
+            </div>
+          </div>
         </div>
+
       </div>
     <% end %>
   </div>
