--- a/app/assets/stylesheets/track.scss
+++ b/app/assets/stylesheets/track.scss
@@ -1,3 +1,9 @@
+.course-track-title {
+  color: #777;
+  font-weight: 600;
+  margin-bottom: 20px;
+}
+
 .track-container a {
   color: none;
   cursor: pointer;
@@ -23,18 +29,17 @@
     }
   }
 
+  .track-progression {
+    border-top: 1px solid #ddd;
+    padding-top: 15px;
+  }
+
   .track-number {
     font-size: 18px;
     /* text-transform: uppercase; */
     font-family: 'Titillium Web';
     font-weight: 600;
     color: #999999;
-  }
-
-  .course-track-title {
-    color: #999999;
-    font-weight: 600;
-    margin-bottom: 20px;
   }
 
   .btn-track {
@@ -50,6 +55,13 @@
   }
 }
 
+@mixin track-transitions {
+  transition: box-shadow 700ms ease;
+  -webkit-transition: box-shadow 700ms ease;
+  -moz-transition: box-shadow 700ms ease;
+  -o-transition: box-shadow 700ms ease;
+}
+
 .track {
   height: 350px;
   background: white;
@@ -58,18 +70,14 @@
   border-radius: 4px;
   border: 2px solid #ddd;
   position: relative;
+  border-top: 6px solid #ec6952;
 
-  transition: border 700ms ease;
-  -webkit-transition: border 700ms ease;
-  -moz-transition: border 700ms ease;
-  -o-transition: border 700ms ease;
+  @include track-transitions;
 
   &:hover {
-    border: 2px solid #ec6952;
-    transition: border 700ms ease;
-    -webkit-transition: border 700ms ease;
-    -moz-transition: border 700ms ease;
-    -o-transition: border 700ms ease;
+    @include track-transitions;
+
+    box-shadow: 1px 3px 16px rgba(0, 0, 0, 0.2);
   }
 
   .btn-track-access {
