--- a/app/views/courses/_track.html.erb
+++ b/app/views/courses/_track.html.erb
@@ -1,4 +1,4 @@
-<div class="col-xs-12 col-md-4">
+<div class="col-xs-12 col-md-6 col-lg-4">
   <div class="track-container">
     <%= link_to get_lesson_url_string(track.courses.first, 1) do %>
       <div class="track">
