fix lesson bugs

--- a/app/views/ideator_lessons/lessons/lesson_21.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_21.html.erb
@@ -79,7 +79,7 @@ end
 
 <pre><code class="erb">
 &lt;!-- HTML code above --&gt;
-  &lt;= render 'shared/flash_messages' %&gt;
+  &lt;%= render 'shared/flash_messages' %&gt;
   &lt;%= yield %&gt;
 &lt;!-- HTML code below --&gt;
 </code></pre>
