--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -8,132 +8,229 @@
 
 <%= render "shared/flash_messages" %>
 
-<div class="row">
-  <div class="col-xs-12 col-md-6">
-    <%= render partial: 'courses/progress', locals: {last_lesson: @last_lesson} %>
+<div class="container">
 
-    <% if !current_user.remote? && !current_user.has_started_prework? && !current_user.has_access? %>
-      <div class="panel">
-        <div class="panel-heading-stats">
-          <h3><i class="fa fa-bar-chart" aria-hidden="true"></i> Start Your 4 Day Prework Period</h3>
-        </div>
-        <div class="panel-body">
-          <p>
-            By pressing the button below, your pre-work period of 4 days will start. If you were not able to finish all of the assignments by the end of the pre-work preiod, you will no longer be eligible for admission into TECHRISE.
-          </p>
-
-          <%= link_to 'START PREWORK', prework_kickoffs_path, method: :post, class: 'btn btn-lg btn-block btn-cta btn-cta-primary' %>
-
-        </div><!-- panel-heading-stats -->
-      </div><!-- panel -->
-    <% end %>
-
-    <div class="panel">
-      <div class="panel-heading-stats">
-        <h3>My Stats</h3>
-      </div>
-      <div class="panel-body">
-
-        <div class="row">
-          <% @stats.each do |stat| %>
-            <div class="col-xs-12 col-md-6">
-              <div class="stat-box-dashboard text-center">
-                <div class="stat-box-dashboard-text">
-                  <%= stat.count %>
-                </div><!-- stat-box-text -->
-
-                <div class="stat-box-dashboard-label">
-                  <%= stat.text %>
-                </div><!-- stat-box-label -->
-              </div><!-- stat-box -->
-            </div><!-- col-xs-12 col-md-4 -->
-          <% end %>
-        </div><!-- row-->
-
-      </div><!-- panel-body -->
-    </div><!-- panel -->
-  </div><!-- col-xs-12 col-md-4 -->
-
-  <div class="col-xs-12 col-md-6">
-    <div class="panel">
-      <div class="panel-body">
-        <%= image_tag current_user.avatar, class: 'prof_pic_sm' %>
-        <h3 class="text-center">You have <%= pluralize(@due_cards.count, 'card') %> to review today</h3>
-        <blockquote>
-          <%= @quote[0] %>
-          <small><%= @quote[1] %></small>
-        </blockquote>
-
-        <h3><%= link_to 'Study Flashcards', study_path, class: 'btn btn-cta-primary btn-block' %></h3>
-      </div><!-- panel-body -->
-    </div>
-
-    <div class="panel">
-      <div class="panel-heading-stats">
-        <h3>Activity Log</h3>
-      </div>
-      <div class="panel-body" style="overflow: auto; max-height: 250px;">
-
-        <% @activities.each do |activity| %>
-          <div class="activity">
-            <%= render_activity activity %>
+  <div class="row">
+    <div class="col-xs-12 col-md-6">
+      <% if !current_user.remote? && !current_user.has_started_prework? && !current_user.has_access? %>
+        <div class="panel">
+          <div class="panel-heading-stats">
+            <h3><i class="fa fa-bar-chart" aria-hidden="true"></i> Start Your 4 Day Prework Period</h3>
           </div>
-        <% end %>
+          <div class="panel-body">
+            <p>
+              By pressing the button below, your pre-work period of 4 days will start. If you were not able to finish all of the assignments by the end of the pre-work preiod, you will no longer be eligible for admission into TECHRISE.
+            </p>
 
-      </div><!-- panel-heading-stats -->
-    </div><!-- panel -->
+            <%= link_to 'START PREWORK', prework_kickoffs_path, method: :post, class: 'btn btn-lg btn-block btn-cta btn-cta-primary' %>
 
-    <div class="panel">
-      <div class="panel-heading-stats">
-        <h3>My Questions</h3>
+          </div><!-- panel-heading-stats -->
+        </div><!-- panel -->
+      <% end %>
+    </div><!-- col-xs-12 col-md-4 -->
+  </div><!-- row -->
+
+  <div class="row">
+    <div class="col-xs-12">
+      <h2>Hello <%= current_user.name %></h2>
+    </div>
+  </div> <!--hello user pannel-->
+
+  <div class="row">
+
+    <div class="col-xs-12 col-md-4 left-pannel">
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="progress-panel">
+            <%= render partial: 'courses/progress', locals: {last_lesson: @last_lesson} %>
+          </div>
+        </div> <!-- end of progress pannel -->
+
+        <div class="col-xs-12">
+          <div class="activities-log">
+
+            <div class="row">
+              <div class="col-xs-12 text-center">
+                <div class="title-activity-log">
+                  <h4>Activity Log</h4>
+                </div>
+              </div>
+
+              <div class="col-xs-12">
+                <div class="body-activity-log" style="overflow:scroll; height:305px;">
+                  <% @activities.each do |activity| %>
+                    <%= render_activity activity %>
+                  <% end %>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div> <!-- end of activity log -->  
+
       </div>
-      <div class="panel-body">
+    </div> <!--end of left pannel -->
 
-        <ul class="unindented_ul">
-          <% @questions.each do |question| %>
 
-            <% course_name = get_lesson_title(question.course_name, question.lesson_id) %>
+    <div class="col-xs-12 col-md-8 right-pannel">
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="community-panel">
+            <div class="row">
+              <div class="col-xs-12 text-center">
+                <div class="title-community-panel">
+                  <h4>Community</h4>
+                </div>
+              </div>
+            </div>
+
+            <div class="row community">
+              <div class="col-xs-1"></div>
+              <div class="col-xs-1">
+                <div class="profile-pic-community-pannel">
+                </div>
+              </div>
+
+              <div class="col-xs-1"></div>
+
+              <div class="col-xs-6 community-pannel-question-detail">
+                <div class="row">
+                  <p class="col-xs-12 title-community-question">
+                    <strong>links</strong>
+                  </p>
+                  <p class="col-xs-12 time-community-question">
+                    6 days ago by Rabin Gaire
+                  </p>
+                  <p class="col-xs-12 tags-community-question">
+                    <span>MVC</span>
+                    <span>Overview of HTTP Methods</span>
+                  </p>
+                </div> 
+              </div>
+
+              <div class="col-xs-3 text-center user-interaction-info">
+                <p>2</p>
+                <p>Replies</p>
+                <p class="glyphicon glyphicon-ok"></p>
+              </div>
+            </div>
+
+            <div class="row community">
+              <div class="col-xs-1"></div>
+              <div class="col-xs-1">
+                <div class="profile-pic-community-pannel">
+                </div>
+              </div>
+
+              <div class="col-xs-1"></div>
+
+              <div class="col-xs-6 community-pannel-question-detail">
+                <div class="row">
+                  <p class="col-xs-12 title-community-question">
+                    <strong>remainders output</strong>
+                  </p>
+                  <p class="col-xs-12 time-community-question">
+                    9 days ago by Rabin Gaire
+                  </p>
+                  <p class="col-xs-12 tags-community-question">
+                    <span>Ruby</span>
+                    <span>Math is easy</span>
+                  </p>
+                </div> 
+              </div>
+
+              <div class="col-xs-3 text-center user-interaction-info">
+                <p>2</p>
+                <p>Replies</p>
+                <p class="glyphicon glyphicon-ok"></p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-xs-12 col-md-6">
+          <div class="my-question-pannel">
+            <div class="row">
+              <div class="col-xs-12 text-center">
+                <div class="title-question-panel">
+                  <h4>My Questions</h4>
+                </div>
+              </div>
+            </div>
+
+            <div class="row data-question-pannel" style="overflow:scroll; height:130px;">
+              <div class="col-xs-12">
+                <% @questions.each do |question| %>
+                  <p class="question-data">
+
+                    <% course_name = get_lesson_title(question.course_name, question.lesson_id) %>
+                    <strong style="color:#ec6952">
+                      <%= link_to question.title, question_path(question) %>
+                    </strong>in <%= course_name %> <%= '<i class="fa fa-check-circle" style="margin-left: 5px; color: #5cb85c;" aria-hidden="true"></i>'.html_safe if question.resolved %>
+                  </p>
+                <% end %>
+
+                <% if @questions.empty? %>
+                  <p class="text-center">
+                    You haven't asked any questions yet.
+                  </p>
+                <% end %>
+              </div>
+            </div>
+
+            <% unless @questions.empty? %>
+              <div class="row">
+                <div class="col-xs-12 text-center">
+                  <h5><%= link_to '<i class="fa fa-caret-right" aria-hidden="true"></i> View all'.html_safe, questions_path %></h5>
+                </div>
+              </div>
+            <% end %>
+          </div>
+        </div> <!-- myquestions pannel -->
+
+        <div class="col-xs-12 col-md-6">
+          <div class="my-submissions-pannel">
             
-            <li><span class="question_list_title"><%= link_to question.title, question_path(question) %></span> in <span class="question_list_course_name"><%= course_name %></span> <%= '<i class="fa fa-check-circle" style="margin-left: 5px; color: #5cb85c;" aria-hidden="true"></i>'.html_safe if question.resolved %></li>
+            <div class="row">
+              <div class="col-xs-12 text-center">
+                <div class="title-submissions-panel">
+                  <h4>My Submissions</h4>
+                </div>
+              </div>
+            </div>
 
-          <% end %>
-        </ul>
+            <div class="row data-submissions-pannel" style="overflow:scroll; height:130px;">
+              <div class="col-xs-12">
+                <% @submissions.each do |submission| %>
+                  <p class="submissions-data">
+                    <% course_name = get_lesson_title(submission.course_name, submission.lesson_id) %>
+                    <strong style="color:#ec6952">
+                      <%= link_to submission.title, submission_path(submission) %>
+                    </strong>in <%= course_name %> <%= '<i class="fa fa-check-circle" style="margin-left: 5px; color: #5cb85c;" aria-hidden="true"></i>'.html_safe if submission.approved %>  
+                  </p>
+                <% end %>
 
-        <% if @questions.empty? %>
-          <p class="text-center">You haven't asked any questions yet.</p>
-        <% else %>
-          <h5 class="pull-right"><%= link_to '<i class="fa fa-caret-right" style="margin-left: 5px;" aria-hidden="true"></i> View all'.html_safe, questions_path %></h5>
-        <% end %>
+                <% if @submissions.empty? %>
+                  <p class="text-center">You don't have any submissions yet.</p>
+                <% end %>
+              </div>
+            </div>
 
-      </div><!-- panel-heading-stats -->
-    </div><!-- panel -->
-
-    <div class="panel">
-      <div class="panel-heading-stats">
-        <h3>My Submissions</h3>
+            <% unless @submissions.empty? %>
+              <div class="row">
+                <div class="col-xs-12 text-center">
+                  <h5><%= link_to '<i class="fa fa-caret-right" aria-hidden="true"></i> View all'.html_safe, submissions_path %></h5>
+                </div>
+              </div>
+            <% end %>
+          </div>
+        </div>
       </div>
-      <div class="panel-body">
+    </div> <!-- end of left pannel -->
 
-        <ul class="unindented_ul">
-          <% @submissions.each do |submission| %>
+  </div> <!-- end of row -->
 
-            <% course_name = get_lesson_title(submission.course_name, submission.lesson_id) %>
+</div> <!-- end of container -->
 
-            <li><span class="question_list_title"><%= link_to submission.title, submission_path(submission) %></span> in <span class="question_list_course_name"><%= course_name %></span> <%= '<i class="fa fa-check-circle" style="margin-left: 5px; color: #5cb85c;" aria-hidden="true"></i>'.html_safe if submission.approved %></li>
-          <% end %>
-        </ul>
-
-        <% if @submissions.empty? %>
-          <p class="text-center">You don't have any submissions yet.</p>
-        <% else %>
-          <h5 class="pull-right"><%= link_to '<i class="fa fa-caret-right" style="margin-left: 5px;" aria-hidden="true"></i> View all'.html_safe, submissions_path %></h5>
-        <% end %>
-
-      </div><!-- panel-body -->
-    </div><!-- panel -->
-
-  </div><!-- col-xs-12 col-md-6 -->
-</div><!-- row -->
 
 <% if current_user.admin %>
 
