--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -1,5 +1,5 @@
 .progress-panel {
-  height: 250px;
+  height: 280px;
   background-color: #ffffff;
   border-radius: 2px;
   border:2px solid #E8E2E2;
@@ -39,6 +39,8 @@
 }
 
 .profile-pic-activity-log {
+  height:30px;
+  width:40px;
   border-radius: 100%;
   margin-top: 5px;
 }
@@ -54,7 +56,7 @@
 }
 
 .community-panel {
-  height: 400px;
+  height: 430px;
   background-color: #ffffff;
   border-radius: 2px;
   border:2px solid #E8E2E2;
@@ -65,9 +67,8 @@
 }
 
 .profile-pic-community-pannel {
-  height: 40px;
-  width: 40px;
-  background-color: #2E94B9;
+  height:30px;
+  width: 30px;
   border-radius: 50%;
   margin-top: 15px;
 }
@@ -81,13 +82,19 @@
 }
 
 .time-community-question, .tags-community-question {
-  font-size: 0.75em;
+  font-size: 0.65em;
+}
+
+.tags-community-question a:hover {
+  text-decoration:none;
 }
 
 .tags-community-question span {
   border:2px solid #E8E2E2; 
   padding:3px;
   border-radius: 4px;
+  color: #444444;
+  margin-left:5px;
 }
 
 .user-interaction-info p {
