--- a/app/views/public_activity/flashcard/_complete.html.erb
+++ b/app/views/public_activity/flashcard/_complete.html.erb
@@ -1,11 +1,18 @@
 <div class="row">
-  <div class="col-xs-1">
-    <i class="fa fa-check activity_icon" aria-hidden="true"></i> 
+  <div class="col-xs-2">
+    <%= image_tag activity.owner.avatar, class: 'profile-pic-activity-log' %>
   </div>
+  <div class="col-xs-10">
+    <div class="row">
+      <div class="col-xs-12">
+        <p class="message-title-activity-log">
+          <strong><%= activity.owner.name %> completed a flashcard</strong>
+        </p>
 
-  <div class="col-xs-11">
-    <span class="activity_time"><small><%= time_ago_in_words(activity.created_at) %> ago</small></span><br>
-    <strong><%= activity.owner.name %> completed a flashcard</strong><br>
-    <%= image_tag activity.owner.avatar, class: 'prof_pic_xs' %><span class="activity_description"></span>
+        <p class="message-time-activity-log">
+          <%= time_ago_in_words(activity.created_at) %> ago
+        </p> 
+      </div>
+    </div>
   </div>
 </div>
