--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -32,7 +32,7 @@
 
   <div class="row">
     <div class="col-xs-12">
-      <h2>Hello <%= current_user.name %>!</h2>
+      <h2 style="font-weight: 900;">Hello <%= current_user.name %>!</h2>
     </div>
   </div> <!--hello user pannel-->
 
