revise mvc lesson 3

--- a/app/views/mvc_lessons/lessons/lesson_3.html.erb
+++ b/app/views/mvc_lessons/lessons/lesson_3.html.erb
@@ -149,8 +149,8 @@ edit_idea GET    /ideas/:id/edit(.:format) ideas#edit
 </p>
 
 <ul>
-  <li><%= link_to 'http://weblog.rubyonrails.org/2012/2/26/edge-rails-patch-is-the-new-primary-http-method-for-updates/' %></li>
-  <li><%= link_to 'http://stackoverflow.com/questions/21660791/what-is-the-main-difference-between-patch-and-put-request' %></li>
+  <li><%= link_to 'PATCH is the new primary HTTP method for updates', 'http://weblog.rubyonrails.org/2012/2/26/edge-rails-patch-is-the-new-primary-http-method-for-updates/' %></li>
+  <li><%= link_to 'What is the main difference between patch and put request?', 'http://stackoverflow.com/questions/21660791/what-is-the-main-difference-between-patch-and-put-request' %></li>
 </ul>
 
 <p>
