--- a/app/views/html_css_lessons/lessons/lesson_2.html.erb
+++ b/app/views/html_css_lessons/lessons/lesson_2.html.erb
@@ -1,15 +1,5 @@
-
-
 <p>
-  For your first intro to HTML and CSS, we are going to use Dash Assembly's HTML and CSS course. <strong>Throughout your experience at TECHRISE, although many of our course materials are written at TECHRISE, we may use some outside resources for some parts of the course for you to learn some basic fundamentals.</strong> This is because these services are already well-established and free to use.
-</p>
-
-<p>
-  <strong>At TECHRISE, we believe that simply having the resources to learn is not enough for most people to truly learn.</strong> Instead, what is actually important is <strong>having someone guide you through every step of your path to becoming a web developer.</strong> This is why there are so many people that sign up for free coding education platforms but fail to internalize and learn the material.
-</p>
-
-<p>
-  With that being said, we have <strong>hand-crafted the curriculum at TECHRISE to offer the best possible education. We are also constantly improving and updating our curriculum.</strong>
+  For your first intro to HTML and CSS, we are going to use Dash Assembly's HTML and CSS course. Once you have learned the basics of HTML and CSS through these exercises, <strong>you will build two real projects that you can start using immediately.</strong>
 </p>
 
 <h2>Instructions</h2>
@@ -18,9 +8,9 @@
   <li>Go to <a href = "https://dash.generalassemb.ly" target = "_blank">this link</a> to get started! You'll need to sign up for an account.</li>
   <li>Finish <strong>Project 1 ~ 2</strong></li>
   <li><strong>You don't have to finish Project 3, 4, and 5</strong></li>  
-  <li>Upload screenshot of your completed Dash Assembly screen in the <%= link_to 'submission page.', new_submission_path(course_name: controller_name.classify, lesson_id: params[:id]) %></li>
+  <li>Upload a screenshot <%= link_to 'here', 'https://postimage.org/', target: '_blank' %> and submit the link to the screenshot down below</li>
   <li>There is no need to submit the code for each of the projects</li>
-  <li>Go to next lesson while you wait for our feedback :)</li>
+  <li>Go to next lesson while you wait for our feedback</li>
 </ul>
 
 
