--- a/app/views/html_css_lessons/lessons/lesson_1.html.erb
+++ b/app/views/html_css_lessons/lessons/lesson_1.html.erb
@@ -1,7 +1,7 @@
 
 
 <p>
-	Before you get started on the pre-work assignments, here are a few quick guidelines for you to learn the maximum amount:
+	Before you get started, here are a few quick guidelines to maximize your learning experience.
 </p>
 
 <ul>
