revise filmster lesson 4

--- a/app/views/filmster_lessons/lessons/lesson_4.html.erb
+++ b/app/views/filmster_lessons/lessons/lesson_4.html.erb
@@ -35,8 +35,8 @@ rails new filmster --database=postgresql --skip-turbolinks
 
 <pre><code class="ruby">
 config.generators do |g|
-  generate.helper false
-  generate.assets false
+  g.helper false
+  g.assets false
 end
 </code></pre>
 
