--- a/app/views/intro_lessons/lessons/lesson_1.html.erb
+++ b/app/views/intro_lessons/lessons/lesson_1.html.erb
@@ -25,13 +25,19 @@
 	<strong>In the intro course, here's what you will accomplish:</strong>
 </p>
 
-<h3>Step 1. Create a Personal Resume Page</h3>
+<h3>Step 1. Create 2 HTML/CSS Projects</h3>
 
-<h3>Step 2. Develop and Launch a Portfolio Website</h3>
+<%= image_tag 'intro/dash.png', class: 'img-responsive screenshot' %>
+
+<h3>Step 2. Create a Personal Resume Page</h3>
+
+<h3>Step 3. Develop and Launch a Portfolio Website</h3>
 
 <%= image_tag 'intro/portfolio.png', class: 'img-responsive screenshot' %>
 
-<h3>Step 3. Solve Coding Challenges in Ruby</h3>
+<h3>Step 4. Solve Coding Challenges in Ruby</h3>
+
+<%= image_tag 'intro/ruby_challenges.png', class: 'img-responsive screenshot' %>
 
 <p>
 	Whenever you feel lost or confused about anything, feel free to reach out to the TECHRISE mentors for help. We know that learning web development can be frustrating at first - that's why we are here to help. Whenever you have a question, you can click on the question mark on the sidebar and ask a question.
