--- a/app/views/intro_lessons/lessons/lesson_1.html.erb
+++ b/app/views/intro_lessons/lessons/lesson_1.html.erb
@@ -31,6 +31,8 @@
 
 <h3>Step 2. Create a Personal Resume Page</h3>
 
+<%= image_tag 'intro/resume.png', class: 'img-responsive screenshot' %>
+
 <h3>Step 3. Develop and Launch a Portfolio Website</h3>
 
 <%= image_tag 'intro/portfolio.png', class: 'img-responsive screenshot' %>
