--- a/app/views/ruby_lessons/lessons/lesson_1.html.erb
+++ b/app/views/ruby_lessons/lessons/lesson_1.html.erb
@@ -3,11 +3,11 @@
 </p>
 
 <p>
-  At first, you'll be unfamiliar with a lot of the concepts, but with lots of practice, everything will become second hand nature! :) Starting with Ruby as your first language is a great choice, since once you learn one language, it's so much easier to pick up another language. If you already have experience coding in another language, then great! You'll find Ruby is super easy to learn and code in. It's a super awesome language and we know you'll love it!
+  At first, you'll be unfamiliar with a lot of the concepts, but with lots of practice, everything will become second hand nature! Starting with Ruby as your first language is a great choice, since once you learn one language, it's much easier to pick up another language. If you already have experience coding in another language, then great! You'll find Ruby is super easy to learn and code in. It's a super awesome language and we know you'll love it!
 </p>
 
 <p>
-  For the Ruby lessons, there are so many great free resources out there already that do a great job in teaching it. We'll layout the steps you have to take in order for you to become comfortable in the language. If you have any questions, we'll give personalized advice and answers so you don't feel lost. Never hesitate to ask questions!
+  We'll layout the steps you have to take in order for you to become comfortable in the language. If you have any questions, we'll give personalized advice and answers so you don't feel lost. Never hesitate to ask questions!
 </p>
 
 <p>
